k8s/hmg/auth/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node-service
  namespace: ns-hmg
spec:
  selector:
    app: api-node-auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
  type: ClusterIP
