k8s/hmg/auth/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-node-ingress
  namespace: ns-hmg
spec:
  ingressClassName: traefik
  rules:
    - host: hmg.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-node-service
                port:
                  number: 80
